stop from overflowing to the sides

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,6 @@ hr {
   width: 100%;
   border-color: #2c323a;
 }
+body {
+  overflow-x: hidden;
+}
